--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,17 @@ body{
     align-items: center;
 }
 #welcome img{
-    width: calc(300px+10%);
+    width: 100%;
+    max-width: 500px;
+}
+#welcome p{
+    font-size: 20px;
 }
 #welcome button{
     font-family: 'Yeon Sung', cursive;
-    font-size: large;
+    font-size: 25px;
     border: 0;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
     background-color: #FCE374;
 }
@@ -24,4 +28,28 @@ body{
     font-size: 35px;
     color: white;
 
+}
+
+#questionWrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#answers{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.answer{
+    width: 150px;
+    display: flex;
+    height: 50px;
+    text-align: center;
+    background-color: #FCE374;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
 }
