--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body{
     background-color: #97DCDF;
     font-family: 'Yeon Sung', cursive;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #welcome{
     display: flex;
@@ -51,16 +54,43 @@ body{
     height: 60px;
     text-align: center;
     background-color: #FCE374;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin: 10px;
     border-style: solid;
     border-radius: 5px;
-    border-width: 1px;
+    border-width: 3px;
+    border-color: #2b2e13;
 
 }
 .answersGroup{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+#question{
+    font-size: 20px;
+    text-align: center;
+}
+
+#chronometer{
+    margin-top: 25px;
+    background-color: rgb(255, 182, 47);
+    width: 50px;
+    text-align: center;
+    border-style: solid;
+    border-radius: 5px;
+    font-size: 20px;
+}
+#endText{
+    font-size: x-large;
+}
+#score{
+    margin-top: 25px;
+    background-color:#FCE374;
+    width: 160px;
+    text-align: center;
+    border-style: solid;
+    border-radius: 5px;
+    font-size: 20px;
 }
